[package]
name = "prize-posw-gpu"
authors = ["The Aleo Team <hello@aleo.org>"]
version = "0.1.0"
edition = "2021"

[dependencies.snarkvm]
#git = "https://github.com/AleoHQ/snarkVM"
#branch = "zprize"
path = "../zprize_msm_fft_ec_gpu"

[dependencies.snarkvm-algorithms]
#git = "https://github.com/AleoHQ/snarkVM"
#branch = "zprize"
#features = ["cuda"]
path = "../zprize_msm_fft_ec_gpu/algorithms"
version = "0.7.5"

[dependencies.snarkvm-dpc]
#git = "https://github.com/AleoHQ/snarkVM"
#branch = "zprize"
path = "../zprize_msm_fft_ec_gpu/dpc"

[dependencies.snarkvm-utilities]
#git = "https://github.com/AleoHQ/snarkVM"
#branch = "zprize"
path = "../zprize_msm_fft_ec_gpu/utilities"


[dependencies.rand]
version = "0.8"

[dependencies.rand_core]
version = "0.6"

[dependencies.log]
version = "0.4.8"

[dependencies.websocket]
version = "0.26.0"
